tests/errors/compiler/assmnt_float_to_int/test.c
int main()
{
	int a;
	a = 1.1;

	return 0;
}
